FrmQuickSetup: fix content alignment

--- a/v9/Components/ImageGlass.Settings/WebUI/src/styles/pages/quick-setup.scss
+++ b/v9/Components/ImageGlass.Settings/WebUI/src/styles/pages/quick-setup.scss
@@ -45,7 +45,10 @@
     margin-bottom: auto;
 
     .step {
-      display: inline-block;
+      display: inline-flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
 
       &:last-of-type {
         margin-bottom: 0;
